--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-    "angular": "^1.6.2",
-    "angular-ui-router": "1.0.0-beta.3"
+    "angular": "^1.6.2"
   },
   "devDependencies": {
     "@types/angular": "^1.6.6",
@@ -9,7 +8,6 @@
     "@types/jquery": "^2.0.40",
     "angular-mocks": "^1.6.2",
     "gulp-angular-templatecache": "^2.0.0",
-    "@types/angular-ui-router": "^1.1.36",
     "del": "^2.2.2",
     "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
     "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
@@ -19,7 +17,6 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-ng-annotate": "^2.0.0",
-    "gulp-sass": "^3.1.0",
     "browser-sync": "^2.18.8",
     "browser-sync-spa": "^1.0.3",
     "karma": "^1.4.1",
@@ -46,8 +43,6 @@
     "webpack-fail-plugin": "^1.0.5",
     "ng-annotate-loader": "^0.2.0",
     "html-loader": "^0.4.4",
-    "sass-loader": "^6.0.1",
-    "node-sass": "^4.5.0",
     "eslint": "^3.15.0",
     "eslint-config-xo-space": "^0.15.0",
     "eslint-config-angular": "^0.5.0",
